--- a/frontend3/src/App.Module.scss
+++ b/frontend3/src/App.Module.scss
@@ -38,3 +38,19 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+
+
+  a {
+    margin-top: 50px;
+    margin-right: 40px;
+    color: aliceblue;
+    text-decoration: none;
+    &:hover {
+      color: darkorange;
+    }
+  }
+}
