--- a/frontend3/src/components/DishCard/DishCard.Module.scss
+++ b/frontend3/src/components/DishCard/DishCard.Module.scss
@@ -1,3 +1,20 @@
 .div {
-  font-size: 22px;
+  font-size: 12px;
+}
+
+.oneDishCard {
+  margin-top: 100px;
+  margin-bottom: 200px;
+  padding-left: 100px;
+  padding-right: 100px;
+
+  h3 {
+    padding-bottom: 10px;
+  }
+
+  p {
+    margin-top: 20px;
+    text-align: justify;
+  }
+
 }
