--- a/frontend3/src/components/DishCard/DishCard.Module.scss
+++ b/frontend3/src/components/DishCard/DishCard.Module.scss
@@ -8,6 +8,14 @@
   padding-left: 100px;
   padding-right: 100px;
 
+  a {
+    text-decoration: none;
+    color: antiquewhite;
+    &:hover {
+      color: darkorange;
+    }
+  }
+
   h3 {
     padding-bottom: 10px;
   }
