--- a/frontend3/src/App.Module.scss
+++ b/frontend3/src/App.Module.scss
@@ -7,21 +7,19 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  background-color: #212529;
+  min-height: 100px;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-body {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .App-link {
@@ -34,21 +32,5 @@
   }
   to {
     transform: rotate(360deg);
-  }
-}
-
-.navbar {
-  display: flex;
-  flex-direction: row;
-
-
-  a {
-    margin-top: 50px;
-    margin-right: 40px;
-    color: aliceblue;
-    text-decoration: none;
-    &:hover {
-      color: darkorange;
-    }
   }
 }
