--- a/frontend3/src/components/Sidebar/Sidebar.Module.scss
+++ b/frontend3/src/components/Sidebar/Sidebar.Module.scss
@@ -1,25 +1,12 @@
 @import "src/style/bootstrap.min";
 
-
-
-
-
-
-
-
-
-.flex-shrink-0 {
-  flex-shrink: 0 !important
+.nav-link {
+  font-size: 22px;
 }
 
-.gap-3 {
-  gap: 1rem !important
-}
+.nav-link:hover {
+  color: #495057;
+  background-color: #0d6efd;
+  border-color: #dee2e6 #dee2e6 #fff
 
-.text-white {
-  color: #fff !important
-}
-
-.bg-dark {
-  background-color: #212529 !important
 }
