--- a/frontend3/src/style/bootstrap.min.scss
+++ b/frontend3/src/style/bootstrap.min.scss
@@ -3724,6 +3724,10 @@ textarea.form-control-lg {
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out
 }
 
+.nav-link:hover {
+
+}
+
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
     transition: none
@@ -4083,7 +4087,9 @@ textarea.form-control-lg {
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-  color: rgba(0, 0, 0, .7)
+  color: #495057;
+  background-color: #fff;
+  border-color: #dee2e6 #dee2e6 #fff
 }
 
 .navbar-light .navbar-nav .nav-link.disabled {
