--- a/frontend3/src/components/Footer/Footer.Module.scss
+++ b/frontend3/src/components/Footer/Footer.Module.scss
@@ -1,7 +1,7 @@
 .App-footer {
   display: flex;
   flex-direction: row;
-  margin: 100px 0 0 0;
+  margin: 0;
   background-color: #212529;
   min-height: 80px;
   font-size: calc(10px + 2vmin);
