--- a/frontend3/src/components/Sidebar/Sidebar.Module.scss
+++ b/frontend3/src/components/Sidebar/Sidebar.Module.scss
@@ -4,9 +4,15 @@
   font-size: 22px;
 }
 
-.nav-link:hover {
+#categoryOneLink:hover {
   color: #495057;
   background-color: #0d6efd;
-  border-color: #dee2e6 #dee2e6 #fff
+  border-color: #dee2e6 #dee2e6 #fff;
+}
 
+
+#allCategoryOneLink:hover {
+  color: #495057;
+  background-color: #0d6efd;
+  border-color: #dee2e6 #dee2e6 #fff;
 }
