--- a/frontend3/src/components/Body/SingleCategory/SingleCategory.Module.scss
+++ b/frontend3/src/components/Body/SingleCategory/SingleCategory.Module.scss
@@ -1,10 +1,1 @@
-.categoryContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.categoryTitle {
-  font-size: 50px;
-  margin: 10px 0 10px 50px;
-}
+@import "src/style/bootstrap.min";
